tests/ui/async-await/async-closures/arg-mismatch.stderr
error[E0391]: cycle detected when type-checking `main`
  --> $DIR/arg-mismatch.rs:6:1
   |
LL | fn main() {
   | ^^^^^^^^^
   |
note: ...which requires computing type of `main::{closure#0}`...
  --> $DIR/arg-mismatch.rs:7:24
   |
LL |     block_on::block_on(async {
   |                        ^^^^^
   = note: ...which again requires type-checking `main`, completing the cycle
   = note: cycle used when running analysis passes on crate `arg_mismatch`
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
